# final-project-level3-cv-13

./: .gitignore  .travis.yml  README.md  google_key.json.enc
Data/Fish/: Fish_Data_Crop.py  README.md
Data/Sashimi/: .gitignore  README.md  requirements.txt
Data/utils/: annotation_tool.ipynb  category_split.py  crop_image.py  csv_concat.py  csv_refactor.py  dataset_split.py  json_dataset_split.py  pseudo_dataset.py
Data_prepare/: Fish_Data_Crop.py  README.md
Data_prepare/Function/: annotaion_part.py  image_part.py
airflow/: README.md  bucket_image_delete.py  data_pipeline.py  gcs_to_sftp.py  kfold_dataset.py  make_pseudo_dataset.py  mkdir.py  mkdir_folder.py
backend/: Dockerfile  README.md  main.py  requirements.txt
backend/app/: api.py  inference.py  model.py
frontend/: Dockerfile  README.md  requirements.txt  simple_streamlit_web.py
frontend/ficv/: .firebaserc  .gitignore  package-lock.json  package.json
ml/: .gitignore  README.md  pyproject.toml
ml/EDA/: fish_data_eda.ipynb
ml/config/: config.yaml  sweep.yaml
ml/feature_map/Fish/: CAM.ipynb  Grad_CAM.ipynb  visualizing.py
ml/feature_map/Sashimi/: Sashimi_CAM.ipynb
ml/pipeline/: dataloader.py  dataset.py  helloworld-374304-e880cf8462f6.json  inference.py  loss.py  model.py  optimizer.py  pth_to_onnx.py  scheduler.py  timm_models.txt  train.py  transforms.py  upload.py  upload_file.py
ml/pipeline/utils/: ConfusionMatrix.py  GridImage.py  IncrementPath.py  SeedEverything.py  UploadBlob.py  pth_to_onnx.py
ml/utils/: confusion_matrix.py  convert_to_onnx.py
test/: api_test.py
(+39 files in other folders)
