[tool.poetry]
name = "ficv-ml"
version = "0.1.0"
description = ""
authors = ["lsvv1217 <lsvv1217@gmail.com>"]
readme = "README.md"
packages = [{include = "ficv_ml"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
pandas = "^1.5.2"
torch = { url = "https://download.pytorch.org/whl/cu110/torch-1.7.1%2Bcu110-cp38-cp38-linux_x86_64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/torchaudio-0.7.2-cp38-cp38-linux_x86_64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu110/torchvision-0.8.2%2Bcu110-cp38-cp38-linux_x86_64.whl"}
opencv-python = "^4.7.0.68"
pillow = "^9.4.0"
sklearn = "^0.0.post1"
scipy = "^1.10.0"
tqdm = "^4.64.1"
wandb = "^0.13.8"
timm = "^0.6.12"
jupyter = "^1.0.0"
json5 = "^0.9.11"
pyyaml = "^6.0"
albumentations = "^1.3.0"
gdown = "^4.6.0"
onnx = "^1.13.0"
google-cloud-storage = "^2.7.0"
plotly = "^5.12.0"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
